fix (card): refactoring text wrapping, setting the maximum width of the question and answer column

--- a/src/feautures/Cards/Cards-table/Card/Card.module.css
+++ b/src/feautures/Cards/Cards-table/Card/Card.module.css
@@ -1,7 +1,10 @@
-.answerText {
-    max-width: 100px;
-    max-height: 100px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+.questionAnswerColumn {
+    max-width: 150px;
+    word-break: break-all;
+}
+
+.questionAnswerColumn img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
